Bug: Section 05 z-index issue.

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -795,6 +795,7 @@ padding-bottom: 4%;
   width: 100%;
   margin: 0 auto;
 z-index: 30;
+  background: rgba(0,0,0,.6);
 }
 
 .sec02-container {
@@ -813,11 +814,11 @@ z-index: 30;
     padding: 1% 2%;
     position: relative;
     height: 100%;
-   z-index: 30;
+
 }
 
 .slider-05 {
-  z-index: 40;
+  z-index: 30;
   width: 100%;
   height:100%;
 }
